@@ -48,6 +48,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.SortedMap;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.LongSupplier;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -188,11 +189,11 @@ public class IndexNameExpressionResolver {
             indexExpressions = new String[] { "*" };
         }
 
-        final List<String> expressions = resolveExpressions(Arrays.asList(indexExpressions), context);
-        return ((expressions == null) ? List.<String>of() : expressions).stream()
+        final Collection<String> expressions = resolveExpressions(Arrays.asList(indexExpressions), context);
+        return expressions.stream()
             .map(x -> state.metadata().getIndicesLookup().get(x))
             .filter(Objects::nonNull)
-            .filter(ia -> ia.getType() == IndexAbstraction.Type.DATA_STREAM)
+            .filter(ia -> ia.getType() == Type.DATA_STREAM)
             .map(IndexAbstraction::getName)
             .toList();
     }
@@ -213,20 +214,19 @@ public class IndexNameExpressionResolver {
             false,
             false,
             includeDataStreams,
-            true,
             getSystemIndexAccessLevel(),
             getSystemIndexAccessPredicate(),
             getNetNewSystemIndexPredicate()
         );
 
-        final List<String> expressions = resolveExpressions(List.of(request.index()), context);
+        final Collection<String> expressions = resolveExpressions(List.of(request.index()), context);
 
         if (expressions.size() == 1) {
-            IndexAbstraction ia = state.metadata().getIndicesLookup().get(expressions.get(0));
+            IndexAbstraction ia = state.metadata().getIndicesLookup().get(expressions.iterator().next());
             if (ia == null) {
-                throw new IndexNotFoundException(expressions.get(0));
+                throw new IndexNotFoundException(expressions.iterator().next());
             }
-            if (ia.getType() == IndexAbstraction.Type.ALIAS) {
+            if (ia.getType() == Type.ALIAS) {
                 Index writeIndex = ia.getWriteIndex();
                 if (writeIndex == null) {
                     throw new IllegalArgumentException(
@@ -247,7 +247,7 @@ public class IndexNameExpressionResolver {
         }
     }
 
-    private static List<String> resolveExpressions(List<String> expressions, Context context) {
+    private static Collection<String> resolveExpressions(List<String> expressions, Context context) {
         return WildcardExpressionResolver.resolve(context, DateMathExpressionResolver.resolve(context, expressions));
     }
 
@@ -341,7 +341,7 @@ public class IndexNameExpressionResolver {
         final boolean failNoIndices = indexExpressions.length == 1
             ? options.allowNoIndices() == false
             : options.ignoreUnavailable() == false;
-        final List<String> expressions = resolveExpressions(Arrays.asList(indexExpressions), context);
+        final Collection<String> expressions = resolveExpressions(Arrays.asList(indexExpressions), context);
 
         if (expressions.isEmpty()) {
             if (options.allowNoIndices() == false) {
@@ -380,7 +380,7 @@ public class IndexNameExpressionResolver {
                 } else {
                     continue;
                 }
-            } else if (indexAbstraction.getType() == IndexAbstraction.Type.ALIAS && context.getOptions().ignoreAliases()) {
+            } else if (indexAbstraction.getType() == Type.ALIAS && context.getOptions().ignoreAliases()) {
                 if (failNoIndices) {
                     throw aliasesNotSupportedException(expression);
                 } else {
@@ -391,7 +391,7 @@ public class IndexNameExpressionResolver {
                 continue;
             }
 
-            if (indexAbstraction.getType() == IndexAbstraction.Type.ALIAS && context.isResolveToWriteIndex()) {
+            if (indexAbstraction.getType() == Type.ALIAS && context.isResolveToWriteIndex()) {
                 Index writeIndex = indexAbstraction.getWriteIndex();
                 if (writeIndex == null) {
                     throw new IllegalArgumentException(
@@ -405,7 +405,7 @@ public class IndexNameExpressionResolver {
                 if (addIndex(writeIndex, null, context)) {
                     concreteIndices.add(writeIndex);
                 }
-            } else if (indexAbstraction.getType() == IndexAbstraction.Type.DATA_STREAM && context.isResolveToWriteIndex()) {
+            } else if (indexAbstraction.getType() == Type.DATA_STREAM && context.isResolveToWriteIndex()) {
                 Index writeIndex = indexAbstraction.getWriteIndex();
                 if (addIndex(writeIndex, null, context)) {
                     concreteIndices.add(writeIndex);
@@ -664,7 +664,13 @@ public class IndexNameExpressionResolver {
             getSystemIndexAccessPredicate(),
             getNetNewSystemIndexPredicate()
         );
-        return Set.copyOf(resolveExpressions(Arrays.asList(expressions), context));
+        Collection<String> resolved = resolveExpressions(Arrays.asList(expressions), context);
+        if (resolved instanceof Set<String>) {
+            // unmodifiable without creating a new collection as it might contain many items
+            return Collections.unmodifiableSet((Set<String>) resolved);
+        } else {
+            return Set.copyOf(resolved);
+        }
     }
 
     /**
@@ -785,7 +791,7 @@ public class IndexNameExpressionResolver {
             getSystemIndexAccessPredicate(),
             getNetNewSystemIndexPredicate()
         );
-        final List<String> resolvedExpressions = resolveExpressions(
+        final Collection<String> resolvedExpressions = resolveExpressions(
             expressions != null ? Arrays.asList(expressions) : Collections.emptyList(),
             context
         );
@@ -805,7 +811,7 @@ public class IndexNameExpressionResolver {
 
         for (String expression : resolvedExpressions) {
             IndexAbstraction indexAbstraction = state.metadata().getIndicesLookup().get(expression);
-            if (indexAbstraction != null && indexAbstraction.getType() == IndexAbstraction.Type.ALIAS) {
+            if (indexAbstraction != null && indexAbstraction.getType() == Type.ALIAS) {
                 for (Index index : indexAbstraction.getIndices()) {
                     String concreteIndex = index.getName();
                     if (norouting.contains(concreteIndex) == false) {
@@ -829,7 +835,7 @@ public class IndexNameExpressionResolver {
                         }
                     }
                 }
-            } else if (indexAbstraction != null && indexAbstraction.getType() == IndexAbstraction.Type.DATA_STREAM) {
+            } else if (indexAbstraction != null && indexAbstraction.getType() == Type.DATA_STREAM) {
                 IndexAbstraction.DataStream dataStream = (IndexAbstraction.DataStream) indexAbstraction;
                 if (dataStream.getDataStream().isAllowCustomRouting() == false) {
                     continue;
@@ -1124,48 +1130,72 @@ public class IndexNameExpressionResolver {
             // Utility class
         }
 
-        public static List<String> resolve(Context context, List<String> expressions) {
+        /**
+         * Returns a collection of resource names given the {@param expressions} which contains wildcards and exclusions.
+         */
+        public static Collection<String> resolve(Context context, List<String> expressions) {
+            Objects.requireNonNull(expressions);
             // only check open/closed since if we do not expand to open or closed it doesn't make sense to
             // expand to hidden
             if (context.getOptions().expandWildcardsClosed() == false && context.getOptions().expandWildcardsOpen() == false) {
                 return expressions;
+            } else if (isEmptyOrTrivialWildcard(expressions)) {
+                return innerResolveAll(context);
+            } else {
+                return innerResolve(context, expressions);
             }
-
-            if (isEmptyOrTrivialWildcard(expressions)) {
-                List<String> resolvedExpressions = resolveEmptyOrTrivialWildcard(context);
-                if (context.includeDataStreams()) {
-                    final Map<String, IndexAbstraction> dataStreamsAbstractions = context.getState()
-                        .metadata()
-                        .getIndicesLookup()
-                        .entrySet()
-                        .stream()
-                        .filter(entry -> entry.getValue().getType() == IndexAbstraction.Type.DATA_STREAM)
-                        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-                    // dedup backing indices if expand hidden indices option is true
-                    Set<String> resolvedIncludingDataStreams = new HashSet<>(resolvedExpressions);
-                    resolvedIncludingDataStreams.addAll(
-                        expand(context, dataStreamsAbstractions, expressions.isEmpty() ? "_all" : expressions.get(0))
-                    );
-                    return new ArrayList<>(resolvedIncludingDataStreams);
-                }
-                return resolvedExpressions;
-            }
-
-            Set<String> result = innerResolve(context, expressions);
-
-            if (result == null) {
-                return expressions;
-            }
-            if (result.isEmpty() && context.getOptions().allowNoIndices() == false) {
-                IndexNotFoundException infe = new IndexNotFoundException((String) null);
-                infe.setResources("index_or_alias", expressions.toArray(new String[0]));
-                throw infe;
-            }
-            return new ArrayList<>(result);
         }
 
-        private static Set<String> innerResolve(Context context, List<String> expressions) {
-            Set<String> result = null;
+        /**
+         * Returns all the indices and all the datastreams, considering the open/closed, system, and hidden context parameters.
+         * Depending on the context, returns the names of the datastreams themselves or their backing indices.
+         */
+        private static Collection<String> innerResolveAll(Context context) {
+            List<String> resolvedExpressions = resolveEmptyOrTrivialWildcard(context);
+            if (context.includeDataStreams() == false) {
+                return resolvedExpressions;
+            } else {
+                Stream<IndexAbstraction> dataStreamsAbstractions = context.getState()
+                    .metadata()
+                    .getIndicesLookup()
+                    .values()
+                    .stream()
+                    .filter(indexAbstraction -> indexAbstraction.getType() == Type.DATA_STREAM)
+                    .filter(
+                        indexAbstraction -> indexAbstraction.isSystem() == false
+                            || context.systemIndexAccessPredicate.test(indexAbstraction.getName())
+                    );
+                if (context.getOptions().expandWildcardsHidden() == false) {
+                    dataStreamsAbstractions = dataStreamsAbstractions.filter(indexAbstraction -> indexAbstraction.isHidden() == false);
+                }
+                // dedup backing indices if expand hidden indices option is true
+                Set<String> resolvedIncludingDataStreams = expandToOpenClosed(context, dataStreamsAbstractions).collect(Collectors.toSet());
+                resolvedIncludingDataStreams.addAll(resolvedExpressions);
+                return resolvedIncludingDataStreams;
+            }
+        }
+
+        /**
+         * Returns all the existing resource (index, alias and datastream) names that the {@param expressions} list resolves to.
+         * The passed-in {@param expressions} can contain wildcards and exclusions, as well as plain resource names,
+         * but it mustn't be empty.
+         * <br>
+         * The return is a {@code Collection} (usually a {@code Set} but can also be a {@code List}, for performance reasons) of plain
+         * resource names only. All the returned resources are "accessible", in the given context, i.e. the resources exist
+         * and are not an alias or a datastream if the context does not permit it.
+         * Wildcard expressions, depending on the context:
+         * <ol>
+         *   <li>might throw an exception if they don't resolve to anything</li>
+         *   <li>might not resolve to hidden or system resources (but plain names can refer to hidden or system resources)</li>
+         *   <li>might resolve to aliases and datastreams, and it could be (depending on the context) that their backing indices are what's
+         * ultimately returned, instead of the alias or datastream name</li>
+         * </ol>
+         */
+        private static Collection<String> innerResolve(Context context, List<String> expressions) {
+            if (Objects.requireNonNull(expressions).isEmpty()) {
+                throw new IllegalStateException("Cannot resolve empty index expression");
+            }
+            Collection<String> result = null;
             boolean wildcardSeen = false;
             for (int i = 0; i < expressions.size(); i++) {
                 String expression = expressions.get(i);
@@ -1176,16 +1206,16 @@ public class IndexNameExpressionResolver {
                     }
                     continue;
                 }
+                if (result == null) {
+                    // add all the previous ones...
+                    result = new HashSet<>(expressions.subList(0, i));
+                }
                 final boolean add;
                 if (expression.charAt(0) == '-' && wildcardSeen) {
                     add = false;
                     expression = expression.substring(1);
                 } else {
                     add = true;
-                }
-                if (result == null) {
-                    // add all the previous ones...
-                    result = new HashSet<>(expressions.subList(0, i));
                 }
                 if (Regex.isSimpleMatchPattern(expression) == false) {
                     // TODO why does wildcard resolver throw exceptions regarding non wildcarded expressions? This should not be done here.
@@ -1200,19 +1230,28 @@ public class IndexNameExpressionResolver {
                     continue;
                 }
                 wildcardSeen = true;
-
-                final Map<String, IndexAbstraction> matches = matches(context, expression);
-                if (context.getOptions().allowNoIndices() == false && matches.isEmpty()) {
+                Stream<IndexAbstraction> matchingResources = matchResourcesToWildcard(context, expression);
+                Stream<String> matchingOpenClosedNames = expandToOpenClosed(context, matchingResources);
+                AtomicBoolean emptyWildcardExpansion = new AtomicBoolean(false);
+                if (context.getOptions().allowNoIndices() == false) {
+                    emptyWildcardExpansion.set(true);
+                    matchingOpenClosedNames = matchingOpenClosedNames.peek(x -> emptyWildcardExpansion.set(false));
+                }
+                if (add) {
+                    matchingOpenClosedNames.forEachOrdered(result::add);
+                } else {
+                    matchingOpenClosedNames.forEachOrdered(result::remove);
+                }
+                if (emptyWildcardExpansion.get()) {
                     throw indexNotFoundException(expression);
                 }
-                Set<String> expand = expand(context, matches, expression);
-                if (add) {
-                    result.addAll(expand);
-                } else {
-                    result.removeAll(expand);
-                }
             }
-            return result;
+            if (result == null) {
+                // optimisation that avoids allocating a new collection when all the expressions argument exist
+                return expressions;
+            } else {
+                return result;
+            }
         }
 
         private static void validateAliasOrIndex(String expression) {
@@ -1239,7 +1278,7 @@ public class IndexNameExpressionResolver {
             }
 
             // treat aliases as unavailable indices when ignoreAliases is set to true (e.g. delete index and update aliases api)
-            if (indexAbstraction.getType() == IndexAbstraction.Type.ALIAS && options.ignoreAliases()) {
+            if (indexAbstraction.getType() == Type.ALIAS && options.ignoreAliases()) {
                 if (throwExceptionIfAbsent) {
                     throw aliasesNotSupportedException(expression);
                 }
@@ -1277,105 +1316,90 @@ public class IndexNameExpressionResolver {
             return excludeState;
         }
 
-        public static Map<String, IndexAbstraction> matches(Context context, String expression) {
-            SortedMap<String, IndexAbstraction> indicesLookup = context.getState().getMetadata().getIndicesLookup();
-            if (Regex.isMatchAllPattern(expression)) {
-                return filterIndicesLookup(indicesLookup, null, context.getOptions().ignoreAliases(), context.includeDataStreams());
-            } else if (expression.indexOf("*") == expression.length() - 1) {
-                return suffixWildcard(indicesLookup, expression, context.getOptions().ignoreAliases(), context.includeDataStreams());
+        /**
+         * Given a single wildcard {@param expression}, return the {@code Stream} that contains all the resources (i.e. indices, aliases,
+         * and datastreams), that exist in the cluster at this moment in time, and that the wildcard "resolves" to (i.e. the resource's
+         * name matches the {@param expression} wildcard).
+         * The {@param context} provides the current time-snapshot view of cluster state, as well as conditions
+         * on whether to consider alias, datastream, system, and hidden resources.
+         * It does NOT consider the open or closed status of index resources.
+         */
+        private static Stream<IndexAbstraction> matchResourcesToWildcard(Context context, String wildcardExpression) {
+            assert Regex.isSimpleMatchPattern(wildcardExpression);
+            final SortedMap<String, IndexAbstraction> indicesLookup = context.getState().getMetadata().getIndicesLookup();
+            Stream<IndexAbstraction> matchesStream;
+            if (Regex.isSuffixMatchPattern(wildcardExpression)) {
+                // this is an initial pre-filtering in the case where the expression is a common suffix wildcard, eg "test*"
+                matchesStream = filterIndicesLookupForSuffixWildcard(indicesLookup, wildcardExpression).values().stream();
             } else {
-                return filterIndicesLookup(
-                    indicesLookup,
-                    e -> Regex.simpleMatch(expression, e.getKey()),
-                    context.getOptions().ignoreAliases(),
-                    context.includeDataStreams()
-                );
+                matchesStream = indicesLookup.values().stream();
+                if (Regex.isMatchAllPattern(wildcardExpression) == false) {
+                    matchesStream = matchesStream.filter(
+                        indexAbstraction -> Regex.simpleMatch(wildcardExpression, indexAbstraction.getName())
+                    );
+                }
             }
+            if (context.getOptions().ignoreAliases()) {
+                matchesStream = matchesStream.filter(indexAbstraction -> indexAbstraction.getType() != Type.ALIAS);
+            }
+            if (context.includeDataStreams() == false) {
+                matchesStream = matchesStream.filter(indexAbstraction -> indexAbstraction.isDataStreamRelated() == false);
+            }
+            // historic, i.e. not net-new, system indices are included irrespective of the system access predicate
+            // the system access predicate is based on the endpoint kind and HTTP request headers that identify the stack feature
+            matchesStream = matchesStream.filter(
+                indexAbstraction -> indexAbstraction.isSystem() == false
+                    || (indexAbstraction.getType() != Type.DATA_STREAM
+                        && indexAbstraction.getParentDataStream() == null
+                        && context.netNewSystemIndexPredicate.test(indexAbstraction.getName()) == false)
+                    || context.systemIndexAccessPredicate.test(indexAbstraction.getName())
+            );
+            if (context.getOptions().expandWildcardsHidden() == false) {
+                if (wildcardExpression.startsWith(".")) {
+                    // there is this behavior that hidden indices that start with "." are not hidden if the wildcard expression also
+                    // starts with "."
+                    matchesStream = matchesStream.filter(
+                        indexAbstraction -> indexAbstraction.isHidden() == false || indexAbstraction.getName().startsWith(".")
+                    );
+                } else {
+                    matchesStream = matchesStream.filter(indexAbstraction -> indexAbstraction.isHidden() == false);
+                }
+            }
+            return matchesStream;
         }
 
-        private static Map<String, IndexAbstraction> suffixWildcard(
+        private static Map<String, IndexAbstraction> filterIndicesLookupForSuffixWildcard(
             SortedMap<String, IndexAbstraction> indicesLookup,
-            String expression,
-            boolean ignoreAliases,
-            boolean includeDataStreams
+            String suffixWildcardExpression
         ) {
-            assert expression.length() >= 2 : "expression [" + expression + "] should have at least a length of 2";
-            String fromPrefix = expression.substring(0, expression.length() - 1);
+            assert Regex.isSuffixMatchPattern(suffixWildcardExpression);
+            String fromPrefix = suffixWildcardExpression.substring(0, suffixWildcardExpression.length() - 1);
             char[] toPrefixCharArr = fromPrefix.toCharArray();
             toPrefixCharArr[toPrefixCharArr.length - 1]++;
             String toPrefix = new String(toPrefixCharArr);
-            SortedMap<String, IndexAbstraction> subMap = indicesLookup.subMap(fromPrefix, toPrefix);
-            return filterIndicesLookup(subMap, null, ignoreAliases, includeDataStreams);
+            return indicesLookup.subMap(fromPrefix, toPrefix);
         }
 
-        private static Map<String, IndexAbstraction> filterIndicesLookup(
-            Map<String, IndexAbstraction> indicesLookup,
-            Predicate<? super Map.Entry<String, IndexAbstraction>> filter,
-            boolean ignoreAliases,
-            boolean includeDataStreams
-        ) {
-            boolean shouldConsumeStream = false;
-            Stream<Map.Entry<String, IndexAbstraction>> stream = indicesLookup.entrySet().stream();
-            if (ignoreAliases) {
-                shouldConsumeStream = true;
-                stream = stream.filter(e -> e.getValue().getType() != IndexAbstraction.Type.ALIAS);
-            }
-            if (filter != null) {
-                shouldConsumeStream = true;
-                stream = stream.filter(filter);
-            }
-            if (includeDataStreams == false) {
-                shouldConsumeStream = true;
-                stream = stream.filter(e -> e.getValue().isDataStreamRelated() == false);
-            }
-            if (shouldConsumeStream) {
-                return stream.collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-            } else {
-                return indicesLookup;
-            }
-        }
-
-        private static Set<String> expand(Context context, Map<String, IndexAbstraction> matches, String expression) {
+        /**
+         * Return the {@code Stream} of open and/or closed index names for the given {@param resources}.
+         * Datastreams and aliases are interpreted to refer to multiple indices,
+         * then all index resources are filtered by their open/closed status.
+         */
+        private static Stream<String> expandToOpenClosed(Context context, Stream<IndexAbstraction> resources) {
             final IndexMetadata.State excludeState = excludeState(context.getOptions());
-            final boolean includeHidden = context.getOptions().expandWildcardsHidden();
-            Set<String> expand = new HashSet<>();
-            for (Map.Entry<String, IndexAbstraction> entry : matches.entrySet()) {
-                String aliasOrIndexName = entry.getKey();
-                IndexAbstraction indexAbstraction = entry.getValue();
-
-                if (indexAbstraction.isSystem()) {
-                    if (context.netNewSystemIndexPredicate.test(indexAbstraction.getName())
-                        && context.systemIndexAccessPredicate.test(indexAbstraction.getName()) == false) {
-                        continue;
+            return resources.flatMap(indexAbstraction -> {
+                if (context.isPreserveAliases() && indexAbstraction.getType() == Type.ALIAS) {
+                    return Stream.of(indexAbstraction.getName());
+                } else if (context.isPreserveDataStreams() && indexAbstraction.getType() == Type.DATA_STREAM) {
+                    return Stream.of(indexAbstraction.getName());
+                } else {
+                    Stream<IndexMetadata> indicesStateStream = indexAbstraction.getIndices().stream().map(context.state.metadata()::index);
+                    if (excludeState != null) {
+                        indicesStateStream = indicesStateStream.filter(indexMeta -> indexMeta.getState() != excludeState);
                     }
-                    if (indexAbstraction.getType() == Type.DATA_STREAM || indexAbstraction.getParentDataStream() != null) {
-                        if (context.systemIndexAccessPredicate.test(indexAbstraction.getName()) == false) {
-                            continue;
-                        }
-                    }
+                    return indicesStateStream.map(indexMeta -> indexMeta.getIndex().getName());
                 }
-
-                if (indexAbstraction.isHidden() == false || includeHidden || implicitHiddenMatch(aliasOrIndexName, expression)) {
-                    if (context.isPreserveAliases() && indexAbstraction.getType() == IndexAbstraction.Type.ALIAS) {
-                        expand.add(aliasOrIndexName);
-                    } else {
-                        for (Index index : indexAbstraction.getIndices()) {
-                            IndexMetadata meta = context.state.metadata().index(index);
-                            if (excludeState == null || meta.getState() != excludeState) {
-                                expand.add(meta.getIndex().getName());
-                            }
-                        }
-                        if (context.isPreserveDataStreams() && indexAbstraction.getType() == IndexAbstraction.Type.DATA_STREAM) {
-                            expand.add(indexAbstraction.getName());
-                        }
-                    }
-                }
-            }
-            return expand;
-        }
-
-        private static boolean implicitHiddenMatch(String itemName, String expression) {
-            return itemName.startsWith(".") && expression.startsWith(".") && Regex.isSimpleMatchPattern(expression);
+            });
         }
 
         private static boolean isEmptyOrTrivialWildcard(List<String> expressions) {
